# atelier-tdd

./: .gitignore  README.md  behave.ini  package-lock.json  package.json
.github/workflows/: ci-cd.yml
backend/: README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py  models.py  promotions.py
backend/tests/: test_promotion_service.py  test_promotions_api.py
features/: checkout-paiement.feature  panier.feature
features/step_definitions/: checkout_steps.js  panier_steps.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: promotions.test.ts  promotions.ts
frontend/src/components/: cart-page.test.tsx  cart-page.tsx  promotion-help.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  input.tsx  toast.tsx
frontend/src/features/cart/: cart-items.ts  index.ts  types.ts
frontend/src/features/cart/components/: active-promotion-alert.tsx  cart-benefits.tsx  cart-item-row.tsx  cart-items-card.tsx  cart-page.test.tsx  cart-page.tsx  checkout-heading.tsx  order-summary.tsx  order-totals.tsx  promotion-code-form.tsx  promotion-error-alert.tsx  (+2 more)
frontend/src/lib/: money.ts
frontend/src/types/: promotion.ts
tests/: README.md  test_expiration_boundary_contract.py  test_promotion_api_contract.py
tests/features/: cart_promo_codes.feature  environment.py
tests/features/steps/: promotion_steps.py
tests/features/support/: __init__.py  promotion_driver.py
(+2 files in other folders)
