[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "microshop-backend"
version = "1.0.0"
description = "FastAPI backend for MicroShop promotion codes"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.10,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
test = [
  "behave>=1.3,<2.0",
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]